# terrarium

./: .env.example  .gitignore  .gitmodules  GRAPH_API_IMPLEMENTATION_SUMMARY.md  GRAPH_API_INTEGRATION.md  QUICKSTART_TRUBA.md  README.md  TRUBA_BENCHMARK_GUIDE.md  TRUBA_SETUP.md  Terrarium_Colab_vLLM.ipynb  Terrarium_Run_Colab.ipynb  agent_prompts (1).json  blackboard_0 (11).txt  blackboard_0 (4).txt  blackboard_0 (5).txt  blackboard_0.txt  blackboard_1.txt  data_iteration_1.json  experiment_note.txt  pyproject.toml  requirements.txt  results.txt  run.ps1  run.sh  run_paper_benchmark_truba.sh  run_simulation.slurm  setup_truba.sh  test_graph_api.py  test_simulation_mode.py
attack_module/: attack_modules.py
crypto/: __init__.py  colab_setup.sh  ot_binding.cpp  ot_manager.py  priority_ot.cpp  priority_ot.h  setup.py  test_fallback.py
dashboards/: README.md  build_data.py
dashboards/public/: index.html
envs/: abstract_environment.py
envs/dcops/: __init__.py
examples/: attack_main.py  base_main.py  generate_availability_configs.py
examples/attacks/: main.py
examples/base/: main.py
scripts/: patch_for_colab.py
src/: agent.py  agent_factory.py  availability_formatter.py  blackboard.py  communication_protocol.py  logger.py  server.py  simple_problem_layer.py  toolset_discovery.py  utils.py
tests/: BENCHMARK_README.md  benchmark_e2e.py  benchmark_ot_timing.py  benchmark_ot_vs_plain.py  benchmark_plain_timing.py  compare_benchmarks.py  plain_intersection.py  plot_runtime_comparison.py  run_simulation_benchmark.py  test_plain_intersection.py
(+57 files in other folders)
